# openaccess-mcp

./: .gitignore  API.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  MONITORING.md  Makefile  PERFORMANCE.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  run-tests.sh
examples/profiles/: dev-test-01.json  prod-web-01.json
examples/secrets/: dev-test-01.json  prod-web-01.json
k8s/: deployment.yaml
monitoring/: alertmanager.yml  docker-compose.yml  prometheus.yml  start-monitoring.sh
monitoring/grafana/dashboards/: openaccess-mcp-overview.json
monitoring/rules/: alerting_rules.yml  recording_rules.yml
nginx/: nginx.conf
openaccess_mcp/: __init__.py  auth.py  cli.py  metrics.py  server.py  types.py
openaccess_mcp/audit/: __init__.py  cli.py  logger.py  signer.py
openaccess_mcp/policy/: __init__.py  engine.py  exceptions.py
openaccess_mcp/providers/: __init__.py  rdp.py  rsync.py  sftp.py  ssh.py  tunnel.py  vpn.py
openaccess_mcp/secrets/: __init__.py  providers.py  store.py
tests/: __init__.py  test_types.py
tests/integration/: test_integration.py
tests/unit/: test_providers.py
